clone/istyle.css
 @import url('https://fonts.googleapis.com/css2?family=Inter+Tight&display=swap');

/* General page styles  */
body {
    background-color: #212327;
    color: white;
    font-family: 'Inter Tight', sans-serif;
}
button {
    border:0 none;
    cursor:pointer;
    outline:none;
}

/* Header Section */
.logo {
    height: 65% ;
    width: 95% ;
} 
.headr{
    margin: 2% 7% 0 7%;
    height: 30%;
    display: grid ;
    grid-template-columns: 1fr 3fr 1fr;
    justify-items: stretch;
    align-items: stretch;
}
.head-log{
    display: flex;
    justify-content: center;
    align-items: center;
}
.nav-list{
    list-style: none;
    display: flex;
    justify-content:space-around;
    align-self: stretch;
    color: white;
    font-size:x-large;
    font-weight: bold;
    margin-top: 5%;
    font-size: 1.2rem;
}
.headr a{
    color: white;
    text-decoration: none;
}
.nav-b button{
    height: 70%;
    width: 77%;
    margin-left: 10%;
    margin-top: 5%;
    background-color: #f82586;     
    border-radius: 50px;
    color: white;
}

/* Introduction section */
.introduction{
    padding-left: 7%;
    display: grid;
    grid-template-columns: 0.25fr 1fr 1fr;
    grid-template-rows: 0.2fr 0.1fr 0.6fr 0.6fr 0.4fr 1fr;
}
.welc {
    font-size: 1.2rem;
    grid-area: 2 / 1 / 3 / 3 ;
    align-self: end;
}
.title {
    font-size: 6rem;
    text-decoration: underline;
    grid-area: 2 / 1 / 5 / 4 ;
}
.arr-btn {
    grid-area: 5 / 1 / 6 / 2 ;
    background-color: #f82586; 
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr;
    border-radius: 50%;
}
.circ {
    grid-area: 1 / 1 / 2 / 2 ;
    background-color: transparent;
    height: 30%;
    width: 40%;
    align-self: center;
    justify-self: center;
    border-radius: 20%;
}
.olap {
    color: white;
    background-color: transparent;
    grid-area: 5 / 1 / 6 / 3 ;
    padding-left: 15%;
    justify-self: start;
    font-size: 1.5rem;
}
.introduction h4 {
    display: inline-block;
    grid-area: 6 / 1 / 7 / 2 ;
    font-size: 2rem;
    font-weight: 200;
    padding-left: 5%;
    align-self: start;
    justify-self: start;
}
#oc-clients {
    grid-area: 6 / 2 / 7 / 4 ;
    display: flex;
    justify-content: space-between;
    align-items: start;
    margin-top: 5%;
}
.clients img {
    height: 60px ;
    width: 100px ;
}

/* About Us section */
.bout {
    padding-left: 7%;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 0.1fr 0.4fr 1.8fr 0.5fr 0.5fr;
    margin-bottom: 20%;
}
.bout h4 {
    font-size: 1.4rem;
    font-weight: 200;
    margin: 0;
    padding: 0;
}
.bout h2 {
    grid-area: 2 / 1 / 3 / 3 ;
    z-index: 1;
    font-size: 3.5rem;
    align-self: start;
    justify-self: stretch;
    margin: 0;
    padding: 2% 0 0 0;
}
.bout p {
    grid-column: 1;
    grid-row: 3;
    margin-top: 10%;
    font-size: 1.4rem;
    font-weight: 100;
    line-height: 2.7rem;
}
.bout a {
    color: #f82586;
    text-decoration: underline;
}
.bout-btn {
    grid-area: 4 / 1 / 5 / 2 ;
    display: grid;
    grid-template-columns: 0.9fr 1fr 0.8fr 0.8fr;
    grid-template-rows: 2fr 1fr 2fr;
    margin-top: 15%;
}
.bout .img-bck {
    grid-area: 1 / 1 / 4 / 2 ;
    background-color: #f82586;
    border-radius: 50%;
    display: flex;
    flex-direction: column-reverse;
    justify-content: center;
}
.bout .arrow {
    background-color: transparent;
    height: 30%;
    width: 30%;
    align-self: center;
}
.bout button {
    grid-area: 2 / 1 / 3 / 3 ;
    justify-self: center;
    align-self: center;
    padding-left: 20% ;
    background-color: transparent;
    color: white;
    font-size: 1rem;
    font-weight: 200;
}
.bout img {
    grid-area: 2 / 2 / 6 / 4 ;
    height: 100%;
    width: 100%;
}

/* Services section */
.serv-container {
    padding-left: 7%;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr;
    grid-row-gap: 3%;
}
.img-bg {
    background-color: white;
    padding: 2.5% 2.5% 1.5% 2.5%;
    width: fit-content;
    height:max-content;
}
.img-bg img {
    height: 25.5rem;
    width: 19.5rem; 
}
.down {
    padding-top: 24%;
}
#brand{
    padding-top: 24%;
}
.serv-container h4 {           /* "services" */
    font-size: 1.3rem;
    font-weight: 100;
    padding-top: 13%;
}
.serv-container h2 {            /* What We Do */
    font-size: 3.7rem;
    margin: 0;
    padding: 0;
}
.serv-container h3 {
    font-weight: 90;
    font-size: 2rem;
    padding-left: 2%;
    padding-top: 5%;
}
.serv-container p {
    font-size: 1.4rem;
    padding-left: 2%;
    line-height: 2.5rem;
}
.serv-container button {
    height: 4rem;
    width: 4rem;
    background-color: #f82586;
    color: white;
    font-size: 2rem;
    border-radius: 50%;
}
.arrows {
    height: 35%;
    width: 45%;
}

/* Awards section */
.awar-container {
    padding-left: 7%;
    display: grid;
    grid-template-columns: 1fr 2fr;
    margin-bottom: 20%;
}
.awar-container .left h2 {
    font-size: 3.5rem;
    line-height: 3.7rem;
}
.awar-container .left p {
    font-size: 1.3rem;
    line-height: 2.5rem;
}
.awar-container .left ul {
    font-size: 1.1rem;
    line-height: 2.3rem;
    list-style: none;
    list-style-image: url("./resources/images/list-arr5.png");
}
.awar-container .right {
    justify-self: start;
    align-self: center;
}
.awar-container .right img {
    height: 85%;
    width: 85%;
}

/* Reviews section */
.rev-container {
    padding-left: 7%;
    padding-right: 7%;
    display: grid;
    grid-template-columns: 1fr 2fr;
    grid-template-rows: 1fr 1fr 1fr;
}
.rev-container .left {
    grid-area: 1 / 1 / 4 / 2 ;
    justify-items: start;
    align-items: start;
}
#rev1 {
    grid-area: 1 / 2 / 2 / 3 ;
}
#rev2 {
    grid-area: 2 / 2 / 3 / 3 ;
    margin-top: 2.4%;
}
.rev-container h2 {
    font-size: 3.5rem;
    line-height: 3.3rem;;
    font-weight: bold;
    align-self: start;
    padding: 0;
    margin: 0;
}
.rev-container p {
    font-size: 1.25rem;
    line-height: 2.5rem;
}
.revs-block { 
    display: grid;
    grid-template-columns: 1fr 4fr;
    grid-template-rows: 1fr 1fr;
}
.reviewers {
    height: 100%;
    width: 50%;
    border-radius: 50%;
    grid-area: 1 / 1 / 3 / 2 ;
}
.rev-container h3 {
    display: inline-block;
    padding-left: 12%;
    margin: 0;
    grid-area: 1 / 1 / 2 / 3 ;
    align-self: end;
    font-size: 1.3rem;;
}
.rev-container h4 {
    display: inline-block;
    padding-left: 12%;
    margin: 0;
    font-size: 1.2rem;
    font-weight: 100;
    grid-area: 2 / 1 / 3 / 3
}
.rev-container nav {
    grid-area: 3 / 2 / 4 / 3 ;
    justify-self: start;
    align-self: center; 
    display: grid;
    grid-template-columns: 1.2fr 0.7fr 1fr 1fr 1fr 1fr;
    grid-template-rows: 2fr 1fr 2fr;
}
.rev-container nav .img-bck {
    grid-area: 1 / 1 / 4 / 2 ;
    background-color: #f82586;
    border-radius: 50%;
    display: flex;
    flex-direction: column-reverse;
    justify-content: center;
    align-items: center;
    margin: 2% 0 2% 0 ;
}
.rev-container nav img {
    height: 45%;
    width: 45%;
    background-color: transparent;
    border-radius: 50%;
}
.rev-container nav button {
    background-color: transparent;
    color: white;
    font-size: 1.2rem;
    grid-area: 2 / 1 / 3 / 5 ;
    margin-left: 3%;
}

/* Request section */
.request {
    background-color: #f82586;
    margin: 7%;
    display: grid;
    grid-template-columns: 3fr 1fr;
    grid-template-rows: 1fr 2fr;
}
.request h4 {
    display: inline-block;
    padding: 3% 0 0 4%;
    margin-bottom: 0;
    width: 60%;
    font-weight: 100;
    font-size: 1.3rem;
    grid-area: 1 / 1 / 2 / 2 ;
}
.request h2 {
    display: inline-block;
    padding: 2% 0 0 4%;
    margin-top: 0;
    width: 60%;
    font-size: 4.3rem;
    font-weight: 100;
    grid-area: 2 / 1 / 3 / 2 ;
}
.request button {
    background-color: transparent;
    display:inline-block;
    border:0 none;
    cursor:pointer;
    outline:none;
    grid-area: 1 / 2 / 3 / 3 ;
}

/* Footer section */
footer {
    padding-left: 7%;
    padding-right: 7%;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 5fr 1fr;
    grid-gap: 1.5rem;
}
footer h3 {
    font-size: 1.8rem;
    padding-left: 4%;
    font-weight: 100;
}
footer p {
    font-size: 1.1rem;
    padding: 0;
    margin: 0;
    line-height: 2.2rem;
}
footer .l-links {
    color: white;
    text-decoration: none;
    font-size: 1.1rem;
    line-height: 2.5rem;
}
footer .l-links:hover {
    color:#f82586;
}
.email {
    color: #f82586;
    text-decoration: none;
    line-height: 2.5rem;
    font-size: 1.1rem;
}
footer .bottom {
    grid-area: 2 / 1 / 3 / 4;
}
.bottom hr {
    margin-bottom: 2rem;
}
.bottom p {
    width: 50%;
    display: inline-block;
}
.smedia {
    display:inline;
    margin-left: 23rem;
}
.bottom button {
    background-color: #f82586;
    height: 2.5rem;
    width: 2.5rem;
    border-radius: 50%;
    margin-left: 1.5%;
}
.bottom button img {
    width: 70%;
    height: 53%;
    background-color: #f82586;
}

